        PR debug/37033         * gcc.c (cpp_options): Pass along -g*.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@138850 138bc75d-0d04-0410-961f-82ee72b054a4